--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
