--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "joi": "^17.13.3",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
