--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
@@ -22,6 +23,8 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
   },
